<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:padding="24dp"
    tools:context=".PantallaInicio">

    <ImageView
        android:id="@+id/icon_pot"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/olla"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/brown"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/icon_pot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/app_lema"
        android:textColor="@color/brown"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_categories"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/background_orange"
        android:text="@string/app_ver_categorias"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/text_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_favorites"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/background_red"
        android:text="@string/app_favoritos"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/button_categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_add_recipe"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/background_orange"
        android:text="@string/app_agregar_receta"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/button_favorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cerrar_sesion"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/dark_gray"
        android:text="@string/app_cerrar_sesion"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

